k8s/share-pod/service-share-pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: share-pod-service
  namespace: u1
spec:
  ports:
    - port: 8080
  selector:
    open-ending.com/name: share-pod-app
